feat: add subreddit fetching

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>Reddit Subreddits</h1>
     <div id="subreddits"></div>
 
+    <h1>Treads</h1>
+    <div id="threads"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
