feat: add pagination to subreddit view and threads view

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Reddit Subreddits</h1>
     <div id="subreddits"></div>
 
-    <h1>Treads</h1>
+    <h1>Threads</h1>
     <div id="threads"></div>
 
     <script src="script.js"></script>
